// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff states > then renders diff content with lines 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mchange a[22m[39m                       [49m[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0msrc/file.ts[39m                                                                   [38;2;250;208;0m󰏫 3[39m [49m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/file.ts (a)[0m                                                              [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  diff --git a/src/file.ts b/src/file.ts[0m                                            [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  index abc123..def456 100644[0m                                                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  --- a/src/file.ts[0m                                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +++ b/src/file.ts[0m                                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  @@ -1,3 +1,5 @@[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m   line 1[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +added line[0m                                                                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m   line 2[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  -removed line[0m                                                                     [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +another added[0m                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m   line 3[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`diff states > then renders diff with scroll offset 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mchange a[22m[39m                       [49m[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0msrc/file.ts[39m                                                                   [38;2;250;208;0m󰏫 5[39m [49m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/file.ts (a)[0m                                                              [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 4[0m                                                                            [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 5[0m                                                                            [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 6[0m                                                                            [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 7[0m                                                                            [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`diff states > then renders no content for empty diff 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mchange a[22m[39m                       [49m[38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all (a)[0m                                                                      [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
